--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<p>I am a student of Harvard College, where I am studying Biology and Computer Science.</p>
+					<p>I am a student at Harvard College, where I am studying Biology and Computer Science.</p>
 				</div>
 			</div>
 			<hr class="star-light">
@@ -199,8 +199,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
+                    Email me at mttlai11 at gmail.
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                    <!--
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -227,9 +229,9 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12 text-center">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                                <button type="submit" class="btn btn-success btn-lg">Email Me</button>
                             </div>
-                        </div>
+                        </div>-->
                     </form>
                 </div>
             </div>
