--- a/index.html
+++ b/index.html
@@ -82,11 +82,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="" />
+                    <img class="img-responsive" src="img/cat.png" alt="" />
                     <div class="intro-text">
                         <span class="name">Maria Lai</span>
                         <hr class="star-light">
                         <span class="skills">Harvard College '17</span>
+                        <br>
+                        <span class="skills">Designer | Biologist | Innovator | Programmer
                     </div>
                 </div>
             </div>
@@ -175,9 +177,9 @@
                         <i class="fa fa-linkedin-square"></i> Profile
                     </a>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-lg-offset-2 text-center">
 					<a href="MariaLaiResume.pdf" class="btn btn-lg btn-outline">
-						<i class="fa fa-graduation-cap"></i> Download Resume
+						<i class="fa fa-download"></i> Resume
 					</a>
                 </div>
 
@@ -288,9 +290,9 @@
 						<li>
 							<a href="http://www.linkedin.com/in/laimaria" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
 						</li>
-						<!--<li>
+						<li>
 							<a href="http://solaquamaria.tumblr.com" class="btn-social btn-outline"><i class="fa fa-fw fa-tumblr"></i></a>
-						</li>-->
+						</li>
 					</ul>
 				</ul>
 			</div>
