--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                     <li><a href="projects/D3_Camp/index.html">Zaatari Camp: dynamic line chart with mouseover tooltip, vertical bar chart, CSV data</a></li>
                     <li><a href="projects/D3_FIFA/index.html">FIFA World Cup: advanced filtering, dynamic line chart, dynamic DOM on hover, CSV data</a></li>
                 </ul>
-                <h4>OCaml Functional Programming</h4>
+                <!-- <h4>OCaml Functional Programming</h4> -->
+                <h4>Art</h4>
+				<p>Visit my art portfolio at <a href="http://solaquamaria.tumblr.com/">solaquamaria.tumblr.com</a>.</p>
             </div>
         </div>
     </section>
