added picture book link

--- a/index.html
+++ b/index.html
@@ -150,15 +150,17 @@
                 <h3>Technical Projects</h3>
                 <h4>D3.js Interactive Data Visualizations</h4>
                 <ul>
-                    <li><a href="projects/D3_pizza_deliveries/index.html">Pizza Delivery: dynamically update DOM, JSON data, filter/sort</a></li>
-                    <li><a href="projects/D3_horizontal_bar_chart/index.html">Tallest Buildings: horizontal bar chart, on click update DOM</a></li>
-                    <li><a href="projects/D3_scatter_plot/index.html">Wealth & Health: scatter plot, data points' radius and color based on data values</a></li>
-                    <li><a href="projects/D3_Camp/index.html">Zaatari Camp: dynamic line chart with mouseover tooltip, vertical bar chart, CSV data</a></li>
-                    <li><a href="projects/D3_FIFA/index.html">FIFA World Cup: advanced filtering, dynamic line chart, dynamic DOM on hover, CSV data</a></li>
+                    <li><p><a href="projects/D3_pizza_deliveries/index.html">Pizza Delivery: dynamically update DOM, JSON data, filter/sort</a></p></li>
+                    <li><p><a href="projects/D3_horizontal_bar_chart/index.html">Tallest Buildings: horizontal bar chart, on click update DOM</a></p></li>
+                    <li><p><a href="projects/D3_scatter_plot/index.html">Wealth & Health: scatter plot, data points' radius and color based on data values</a></p></li>
+                    <li><p><a href="projects/D3_Camp/index.html">Zaatari Camp: dynamic line chart with mouseover tooltip, vertical bar chart, CSV data</a></p></li>
+                    <li><p><a href="projects/D3_FIFA/index.html">FIFA World Cup: advanced filtering, dynamic line chart, dynamic DOM on hover, CSV data</a></p></li>
                 </ul>
-                <!-- <h4>OCaml Functional Programming</h4> -->
-                <h4>Art</h4>
+                <h4>OCaml Functional Programming</h4>
+				<p>Coming soon</p>
+                <h3>Art</h3>
 				<p>Visit my art portfolio at <a href="http://solaquamaria.tumblr.com/">solaquamaria.tumblr.com</a>.</p>
+                <p>My first picture book: <a href="BabyGirl_by_MariaLai.pdf">Baby Girl</a>.</p>
             </div>
         </div>
     </section>
