--- a/outreachy.html
+++ b/outreachy.html
@@ -39,8 +39,8 @@
       <section class="module content">
         <div class="container">
           <h2>I'm Maria.</h2>
-          <p>My <a href="https://bugzilla.mozilla.org/user_profile?login=mttlai11%40gmail.com">Bugzilla</a> Profile</p>
-          <p>My first contribution:</p>
+          <!--<p>My <a href="https://bugzilla.mozilla.org/user_profile?login=mttlai11%40gmail.com">Bugzilla</a> Profile</p>-->
+          <p>My first contribution: I fixed <a href="https://github.com/mozilla/fxa-content-server/issues/3639">this</a> bug.</p>
           </div>
       </section>
 <!--
