added 171 final project link

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                 <!-- My project content -->
                 <h3>Technical Projects</h3>
                 <h4>D3.js Interactive Data Visualizations</h4>
+                <ul><li><p>See my final project: <a href="http://ustimeuse.github.io">American Time Use</a></p></li></ul>
                 <ul>
                     <li><p><a href="projects/D3_pizza_deliveries/index.html">Pizza Delivery: dynamically update DOM, JSON data, filter/sort</a></p></li>
                     <li><p><a href="projects/D3_horizontal_bar_chart/index.html">Tallest Buildings: horizontal bar chart, on click update DOM</a></p></li>
