added midterm project. reorganized d3 links

--- a/index.html
+++ b/index.html
@@ -149,13 +149,19 @@
                 <!-- My project content -->
                 <h3>Technical Projects</h3>
                 <h4>D3.js Interactive Data Visualizations</h4>
-                <ul><li><p>See my final project: <a href="http://ustimeuse.github.io">American Time Use</a></p></li></ul>
+                <p>Ordered by scope (descending):</p>
                 <ul>
+                	<li><p><a href="http://ustimeuse.github.io">American Time Use</a>
+	                	<ul>
+	                		<li>My contributions: <a href="ustimeuse.github.io/oneday.html">One Day Simulation</a>, <a href="ustimeuse.github.io/chorddiagram.html">Chord Diagram</a></p></li>
+	            		</ul>
+            		</li>
+            		<li><p><a href="projects/D3_geo_tree/index.html">Interactive Choropleth & Tree Diagram</a></p></li>
+            		<li><p><a href="projects/D3_FIFA/index.html">Interactive Line Chart with update and filtering</a></p></li>
+            		<li><p><a href="projects/D3_Camp/index.html">Dynamic Line Chart with mouseover tooltip, Vertical Bar Chart</a></p></li>
+            		<li><p><a href="projects/D3_scatter_plot/index.html">Data-Driven Scatter Plot</a></p></li>
+            		<li><p><a href="projects/D3_horizontal_bar_chart/index.html">Dynamic horizontal bar chart</a></p></li>
                     <li><p><a href="projects/D3_pizza_deliveries/index.html">Pizza Delivery: dynamically update DOM, JSON data, filter/sort</a></p></li>
-                    <li><p><a href="projects/D3_horizontal_bar_chart/index.html">Tallest Buildings: horizontal bar chart, on click update DOM</a></p></li>
-                    <li><p><a href="projects/D3_scatter_plot/index.html">Wealth & Health: scatter plot, data points' radius and color based on data values</a></p></li>
-                    <li><p><a href="projects/D3_Camp/index.html">Zaatari Camp: dynamic line chart with mouseover tooltip, vertical bar chart, CSV data</a></p></li>
-                    <li><p><a href="projects/D3_FIFA/index.html">FIFA World Cup: advanced filtering, dynamic line chart, dynamic DOM on hover, CSV data</a></p></li>
                 </ul>
                 <h4>OCaml Functional Programming</h4>
 				<p>Coming soon</p>
