--- a/projects/D3_Camp/index.html
+++ b/projects/D3_Camp/index.html
@@ -11,31 +11,31 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <h3>Maria Lai</h3>
-    <h3>D3.js Project: Line Chart with Tooltip, Vertical Bar Chart</h3>
-    <p>My work is in <em><a href="js/main.js">main.js</a></em>.</p>
-    <ul>
-        <li>Manipulate csv data</li>
-        <li><strong>Line Chart:</strong> SVG line and area</strong></li>
-        <li><strong>Mouseover Tooltip:</strong> grab data from mouse location then dynamically display more info</li>
-        <li><strong>Vertical bar chart:</strong> Draw bars, axes, axis labels</li>
-    </ul>
-
 	<div class="container">
+	    <h3>Maria Lai</h3>
+	    <h3>D3.js Project: Line Chart with Tooltip, Vertical Bar Chart</h3>
+	    <p>My work is in <em><a href="js/main.js">main.js</a></em>.</p>
+	    <ul>
+	        <li>Manipulate csv data</li>
+	        <li><strong>Line Chart:</strong> SVG line and area</strong></li>
+	        <li><strong>Mouseover Tooltip:</strong> grab data from mouse location then dynamically display more info</li>
+	        <li><strong>Vertical bar chart:</strong> Draw bars, axes, axis labels</li>
+	    </ul>
 
-		<h1>Za'atari Refugee Camp</h1>
+		<div class="container">
 
-		<!-- Two Columns -->
-		<div id="area-chart" class="col-md-8">
-			<h3>Camp Population</h3>
+			<h1>Za'atari Refugee Camp</h1>
+
+			<!-- Two Columns -->
+			<div id="area-chart" class="col-md-8">
+				<h3>Camp Population</h3>
+			</div>
+			<div id="bar-chart" class="col-md-4">
+				<h3>Type of Shelter</h3>
+			</div>
+
 		</div>
-		<div id="bar-chart" class="col-md-4">
-			<h3>Type of Shelter</h3>
-		</div>
-
 	</div>
-
 
 	<!-- Load JS libraries: jQuery, bootstrap, D3 -->
 	<script src="js/jquery.min.js"></script>
