--- a/projects/D3_horizontal_bar_chart/index.html
+++ b/projects/D3_horizontal_bar_chart/index.html
@@ -7,18 +7,20 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h3>Maria Lai</h3>
-	<h3>D3.js Project: Horizontal Bar Chart, On Click</h3>
-	<p>My work is in <em><a href="js/main.js">main.js</a></em>.</p>
-	<ul>
-		<li>Manipulate CSV data</li>
-		<li><strong>Dynamic Horizontal Bar Chart:</strong> on click dynamically update DOM with more info</li>
-		<li>To see dynamic update: click on building name or bar</li>
-	</ul>
-   
-    <h1>The World's Tallest Buildings</h1>
-    <div id="chart-area" class="col-md-6"></div>
-    <div id="info-area" class="col-md-6"></div>
+	<div class="container">
+		<h3>Maria Lai</h3>
+		<h3>D3.js Project: Horizontal Bar Chart, On Click</h3>
+		<p>My work is in <em><a href="js/main.js">main.js</a></em>.</p>
+		<ul>
+			<li>Manipulate CSV data</li>
+			<li><strong>Dynamic Horizontal Bar Chart:</strong> on click dynamically update DOM with more info</li>
+			<li>To see dynamic update: click on building name or bar</li>
+		</ul>
+	   
+	    <h1>The World's Tallest Buildings</h1>
+	    <div id="chart-area" class="col-md-6"></div>
+	    <div id="info-area" class="col-md-6"></div>
+    </div>
 
 	<script src="js/d3.min.js"></script>
 	<script src="js/jquery-latest.min.js"></script>
