--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             		</li>
             		<li><p><a href="projects/D3_geo_tree/index.html">Interactive Choropleth & Tree Diagram</a></p></li>
             		<li><p><a href="projects/D3_FIFA/index.html">Interactive Line Chart with update and filtering</a></p></li>
-            		<li><p><a href="projects/D3_Camp/index.html">Dynamic Line Chart with mouseover tooltip, Vertical Bar Chart</a></p></li>
+            		<li><p><a href="projects/D3_Camp/index.html">Line Chart with mouseover tooltip, Vertical Bar Chart</a></p></li>
             		<li><p><a href="projects/D3_scatter_plot/index.html">Data-Driven Scatter Plot</a></p></li>
             		<li><p><a href="projects/D3_horizontal_bar_chart/index.html">Dynamic horizontal bar chart</a></p></li>
                     <li><p><a href="projects/D3_pizza_deliveries/index.html">Pizza Delivery: dynamically update DOM, JSON data, filter/sort</a></p></li>
