--- a/projects/D3_FIFA/index.html
+++ b/projects/D3_FIFA/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Maria Lai D3 Advanced Line Chart</title>
+	<title>Maria Lai: D3 Interactive Line Chart</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
 	<div class="container">
 
         <h3>Maria Lai</h3>
-        <h3>D3.js Project: Advanced Line Chart</h3>
+        <h3>D3.js Project: Interactive Line Chart</h3>
         <p>My work is in <em><a href="js/main.js">main.js</a></em>.</p>
         <ul>
             <li>Manipulate csv data (filter, sort, data formats)</li>
