--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<p>I am a student at Harvard College, where I am studying Biology and Computer Science.</p>
+					<p>I am a student at Harvard College, where I am studying Computer Science and Neurobiology.</p>
 				</div>
 			</div>
 			<hr class="star-light">
@@ -153,7 +153,7 @@
                 <ul>
                 	<li><p><a href="http://ustimeuse.github.io">American Time Use</a>
 	                	<ul>
-	                		<li>My contributions: <a href="ustimeuse.github.io/oneday.html">One Day Simulation</a>, <a href="ustimeuse.github.io/chorddiagram.html">Chord Diagram</a></p></li>
+	                		<li>My contributions: <a href="http://ustimeuse.github.io/oneday.html">One Day Simulation</a>, <a href="http://ustimeuse.github.io/chorddiagram.html">Chord Diagram</a></p></li>
 	            		</ul>
             		</li>
             		<li><p><a href="projects/D3_geo_tree/index.html">Interactive Choropleth & Tree Diagram</a></p></li>
@@ -161,7 +161,7 @@
             		<li><p><a href="projects/D3_Camp/index.html">Line Chart with mouseover tooltip, Vertical Bar Chart</a></p></li>
             		<li><p><a href="projects/D3_scatter_plot/index.html">Data-Driven Scatter Plot</a></p></li>
             		<li><p><a href="projects/D3_horizontal_bar_chart/index.html">Dynamic horizontal bar chart</a></p></li>
-                    <li><p><a href="projects/D3_pizza_deliveries/index.html">Pizza Delivery: dynamically update DOM, JSON data, filter/sort</a></p></li>
+                    <li><p><a href="projects/D3_pizza_deliveries/index.html">Data manipulation (filter/sort), dynamically update DOM</a></p></li>
                 </ul>
                 <h4>OCaml Functional Programming</h4>
 				<p>Coming soon</p>
