--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <hr class="star-light">
                         <span class="skills">Harvard College '17</span>
                         <br>
-                        <span class="skills">Designer | Biologist | Programmer
+                        <span class="skills">Programmer | Biologist | Designer
                     </div>
                 </div>
             </div>
