--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <p>I am from Iowa and currently reside in Cambridge, MA.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>At Harvard, I am on the Co-Editor-in-Chief of The Harvard Undergraduate Research Journal (THURJ).</p>
+                    <p>At Harvard, I am the Co-Editor-in-Chief of The Harvard Undergraduate Research Journal (THURJ).</p>
                 </div>
             </div>
 
