updated social icons and headline

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <hr class="star-light">
                         <span class="skills">Harvard College '17</span>
                         <br>
-                        <span class="skills">Programmer | Biologist | Designer
+                        <span class="skills">Programming | Neuroscience | Design
                     </div>
                 </div>
             </div>
@@ -291,18 +291,20 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<ul class="list-inline">
-								 
 						<li>
-							<a href="https://plus.google.com/+MariaLaiTT/about" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-						</li>
-						<li>
-							<a href="https://twitter.com/MariaLaiTT" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+							<a href="https://github.com/marialai" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
 						</li>
 						<li>
 							<a href="http://www.linkedin.com/in/laimaria" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
 						</li>
 						<li>
 							<a href="http://solaquamaria.tumblr.com" class="btn-social btn-outline"><i class="fa fa-fw fa-tumblr"></i></a>
+						</li>		 
+						<li>
+							<a href="https://plus.google.com/+MariaLaiTT/about" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+						</li>
+						<li>
+							<a href="https://twitter.com/MariaLaiTT" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
 						</li>
 					</ul>
 				</ul>
