--- a/index.html
+++ b/index.html
@@ -183,18 +183,18 @@
             </div>
 		
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-12 text-center">
                     <a href="http://www.linkedin.com/in/laimaria" class="btn btn-lg btn-outline">
                         <i class="fa fa-linkedin-square"></i> Profile
                     </a>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
 					<a href="MariaLaiResume.pdf" class="btn btn-lg btn-outline">
 						<i class="fa fa-download"></i> Resume
 					</a>
                 </div>
-
-				
             </div>
 
 			
