--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <li class="page-scroll">
                         <a href="#about">About Me</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="http://blog.mlai.us">Blog</a>
+                    </li>
 					<li class="page-scroll">
 						<a href="#portfolio">Projects</a>
 					</li>
@@ -95,26 +98,13 @@
         </div>
     </header>
 
-    <!-- Two -->
-    <section id="two">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Welcome!</h2>
-                    <hr class="star-primary">
-					<p>Thank you for visiting my personal website.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About Me</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
 			
@@ -123,17 +113,28 @@
 					<p>I am a student at Harvard College, where I am studying Computer Science and Neurobiology.</p>
 				</div>
 			</div>
-			<hr class="star-light">
+			<hr class="star-primary">
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>I am from Iowa and currently reside in Cambridge, MA.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>At Harvard, I am the Co-Editor-in-Chief of The Harvard Undergraduate Research Journal (THURJ).</p>
+                    <p>I like coding and designing. My other interests are neuroscience, machine learning, and data science.</p>
                 </div>
             </div>
+        </div>
+    </section>
 
-			
+    <!-- Two -->
+    <section class="success" id="two">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>My Blog</h2>
+                    <hr class="star-light">
+					<p>Visit <a href="http://blog.mlai.us">blog.mlai.us</a>.</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -180,7 +181,7 @@
                     <h2>Resume</h2>
                     <hr class="star-light">
                 </div>
-            </div>
+            </div><a href="#">
 		
             <div class="row">
                 <div class="col-lg-12 text-center">
