added tumblr photo feed

--- a/index.html
+++ b/index.html
@@ -167,8 +167,29 @@
                 <h4>OCaml Functional Programming</h4>
 				<p>Coming soon</p>
                 <h3>Art</h3>
-				<p>Visit my art portfolio at <a href="http://solaquamaria.tumblr.com/">solaquamaria.tumblr.com</a>.</p>
                 <p>My first picture book: <a href="BabyGirl_by_MariaLai.pdf">Baby Girl</a>.</p>
+                <p>My last 8 art posts on <a href="http://solaquamaria.tumblr.com/">tumblr</a>:</p>
+                <div class='ji-tumblr-photos'><a id='ji-tumblr-url-tumblrPhotoFeed-1' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-1' src='' alt='' /></a><a id='ji-tumblr-url-tumblrPhotoFeed-2' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-2' src='' alt='' /></a><a id='ji-tumblr-url-tumblrPhotoFeed-3' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-3' src='' alt='' /></a><a id='ji-tumblr-url-tumblrPhotoFeed-4' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-4' src='' alt='' /></a><a id='ji-tumblr-url-tumblrPhotoFeed-5' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-5' src='' alt='' /></a><a id='ji-tumblr-url-tumblrPhotoFeed-6' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-6' src='' alt='' /></a><a id='ji-tumblr-url-tumblrPhotoFeed-7' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-7' src='' alt='' /></a><a id='ji-tumblr-url-tumblrPhotoFeed-8' href=''><img border='0' style='margin:0' id='ji-tumblr-photo-tumblrPhotoFeed-8' src='' alt='' /></a>
+                </div>
+                <script type='text/javascript' src='http://solaquamaria.tumblr.com/api/read/json?number=8&type=photo'></script>
+                <script type='text/javascript'>
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-1').setAttribute('src', tumblr_api_read.posts[0]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-1').setAttribute('href', tumblr_api_read.posts[0]['url-with-slug']);
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-2').setAttribute('src', tumblr_api_read.posts[1]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-2').setAttribute('href', tumblr_api_read.posts[1]['url-with-slug']);
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-3').setAttribute('src', tumblr_api_read.posts[2]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-3').setAttribute('href', tumblr_api_read.posts[2]['url-with-slug']);
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-4').setAttribute('src', tumblr_api_read.posts[3]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-4').setAttribute('href', tumblr_api_read.posts[3]['url-with-slug']);
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-5').setAttribute('src', tumblr_api_read.posts[4]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-5').setAttribute('href', tumblr_api_read.posts[4]['url-with-slug']);
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-6').setAttribute('src', tumblr_api_read.posts[5]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-6').setAttribute('href', tumblr_api_read.posts[5]['url-with-slug']);
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-7').setAttribute('src', tumblr_api_read.posts[6]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-7').setAttribute('href', tumblr_api_read.posts[6]['url-with-slug']);
+                document.getElementById('ji-tumblr-photo-tumblrPhotoFeed-8').setAttribute('src', tumblr_api_read.posts[7]['photo-url-100']);
+                document.getElementById('ji-tumblr-url-tumblrPhotoFeed-8').setAttribute('href', tumblr_api_read.posts[7]['url-with-slug']);
+                </script>
             </div>
         </div>
     </section>
