--- a/index.html
+++ b/index.html
@@ -213,11 +213,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-					<a href="MariaLaiResume.pdf" class="btn btn-lg btn-outline">
-						<i class="fa fa-download"></i> Multicolor Resume
-					</a>
                     <a href="Maria_Lai_Resume.pdf" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Black & White Resume
+                        <i class="fa fa-download"></i> Resume
                     </a>
                 </div>
             </div>
